[gd_scene load_steps=5 format=2]

[ext_resource path="res://yard/yard_tile.gd" type="Script" id=1]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
params_blend_mode = 1
albedo_color = Color( 0.313726, 0.313726, 0.313726, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 1, 0.1, 1 )

[node name="YardTile" type="Spatial"]
script = ExtResource( 1 )

[node name="FocusMesh" type="MeshInstance" parent="."]
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Area" type="Area" parent="."]
transform = Transform( 0.9, 0, 0, 0, 1, 0, 0, 0, 0.9, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 3 )
[connection signal="mouse_entered" from="Area" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="Area" to="." method="_on_mouse_exited"]
